test/tests/stages/18_structures/invalid_struct_tags/param_undeclared.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[12]:
  int
  identifier(foo)
  (
  struct
  identifier(s)
  identifier(x)
  )
  {
  return
  const int(0)
  ;
  }
